ckpt: req-20250203-smart-presets 队列轻量化与智能预设引导 — 测试通过

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </style>
   </head>
 
-  <body>
+  <body data-tauri-drag-region>
     <div id="app">
       <div class="boot-shell">
         <div class="boot-logo">FFUI</div>
