--- a/index.html
+++ b/index.html
@@ -34,30 +34,17 @@
         flex-direction: column;
         align-items: center;
         gap: 12px;
+        text-align: center;
       }
 
       .boot-logo {
-        height: 40px;
-        width: 40px;
-        border-radius: 8px;
-        border: 1px solid rgba(148, 163, 184, 0.6);
-        background: rgba(15, 23, 42, 0.9);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 10px;
-        font-weight: 600;
-        letter-spacing: 0.15em;
-        text-transform: uppercase;
-      }
-
-      .boot-title {
-        font-size: 14px;
-        font-weight: 500;
+        height: 56px;
+        width: 56px;
+        display: block;
       }
 
       .boot-subtitle {
-        margin-top: 2px;
+        margin: 0;
         font-size: 12px;
         color: #9ca3af;
       }
@@ -103,9 +90,8 @@
   <body data-tauri-drag-region>
     <div id="app">
       <div class="boot-shell">
-        <div class="boot-logo">FFUI</div>
+        <img class="boot-logo" src="/ffui.svg" alt="FFUI" />
         <div>
-          <p class="boot-title">FFUI</p>
           <p class="boot-subtitle">正在启动 FFUI，请稍候…</p>
         </div>
         <div class="boot-spinner"></div>
