--- a/index.html
+++ b/index.html
@@ -24,79 +24,124 @@
 
       #app {
         min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .boot-shell {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 12px;
-        text-align: center;
-      }
-
-      .boot-logo {
-        height: 56px;
-        width: 56px;
         display: block;
       }
 
-      .boot-subtitle {
-        margin: 0;
-        font-size: 12px;
-        color: #9ca3af;
-      }
-
-      .boot-spinner {
-        margin-top: 10px;
-        width: 60px;
-        height: 2px;
-        border-radius: 999px;
-        background: rgba(31, 41, 55, 0.9);
+      .ffui-boot {
+        position: fixed;
+        inset: 0;
+        z-index: 9999;
+        background: #050505;
         overflow: hidden;
-        position: relative;
+        isolation: isolate;
+        transition:
+          opacity 520ms cubic-bezier(0.4, 0, 0.2, 1),
+          filter 520ms cubic-bezier(0.4, 0, 0.2, 1),
+          transform 520ms cubic-bezier(0.4, 0, 0.2, 1);
       }
 
-      .boot-spinner::before {
-        content: "";
+      .ffui-boot--done {
+        opacity: 0;
+        filter: blur(18px);
+        transform: scale(1.03);
+        pointer-events: none;
+      }
+
+      .terminal-text {
+        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+        font-size: 12px;
+        line-height: 1.2;
+        white-space: nowrap;
+        color: rgba(255, 255, 255, 0.72);
+        opacity: 0.4;
+        pointer-events: none;
+      }
+
+      /* Minimal startup fallback for highlightFfmpegCommand output (Tailwind-like token colors). */
+      .text-white {
+        color: rgba(255, 255, 255, 0.92);
+      }
+      .text-blue-400 {
+        color: rgba(96, 165, 250, 0.96);
+      }
+      .text-amber-400 {
+        color: rgba(251, 191, 36, 0.96);
+      }
+      .text-purple-300 {
+        color: rgba(216, 180, 254, 0.96);
+      }
+      .font-semibold {
+        font-weight: 600;
+      }
+
+      .ffui-boot-text-stream {
         position: absolute;
         inset: 0;
-        width: 40%;
-        background: linear-gradient(
-          90deg,
-          rgba(59, 130, 246, 0) 0%,
-          rgba(59, 130, 246, 0.9) 50%,
-          rgba(59, 130, 246, 0) 100%
-        );
-        animation: boot-pulse 1.1s ease-in-out infinite;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: all 1.2s cubic-bezier(0.4, 0, 0.2, 1);
+        z-index: 2;
+        pointer-events: none;
       }
 
-      @keyframes boot-pulse {
+      .ffui-boot-text-stream--blur-out {
+        filter: blur(20px);
+        opacity: 0 !important;
+        transform: scale(1.5);
+      }
+
+      @keyframes ffui-boot-flow {
         0% {
-          transform: translateX(-120%);
+          opacity: 0;
+          transform: translate3d(var(--x0, 0px), var(--y0, 20px), 0) scale(var(--s0, 0.95));
         }
-        50% {
-          transform: translateX(0%);
+        20% {
+          opacity: 0.36;
+        }
+        80% {
+          opacity: 0.36;
         }
         100% {
-          transform: translateX(120%);
+          opacity: 0;
+          transform: translate3d(var(--x1, 0px), var(--y1, -40px), 0) scale(var(--s1, 1.05));
+        }
+      }
+
+      .ffui-boot-stream {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 0;
+      }
+
+      .ffui-boot-vignette {
+        position: absolute;
+        inset: 0;
+        background: radial-gradient(circle at 50% 50%, rgba(5, 5, 5, 0.06), rgba(5, 5, 5, 0.7) 72%);
+        pointer-events: none;
+        z-index: 1;
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        .ffui-boot-stream {
+          opacity: 0.9;
         }
       }
     </style>
   </head>
 
   <body data-tauri-drag-region>
-    <div id="app">
-      <div class="boot-shell">
-        <img class="boot-logo" src="/ffui.svg" alt="FFUI" />
-        <div>
-          <p class="boot-subtitle">正在启动 FFUI，请稍候…</p>
-        </div>
-        <div class="boot-spinner"></div>
-      </div>
+    <div id="ffui-boot" class="ffui-boot" aria-label="loading">
+      <canvas id="ffui-boot-stream" class="ffui-boot-stream"></canvas>
+      <div class="ffui-boot-vignette"></div>
+      <div id="ffui-boot-text-stream" class="ffui-boot-text-stream" aria-hidden="true"></div>
     </div>
+
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
