--- a/index.html
+++ b/index.html
@@ -24,7 +24,76 @@
 
       #app {
         min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .boot-shell {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        text-align: center;
+      }
+
+      .boot-logo {
+        height: 44px;
+        width: 44px;
         display: block;
+        object-fit: contain;
+        filter: drop-shadow(0 0 18px rgba(0, 0, 0, 0.45));
+      }
+
+      .boot-title {
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      .boot-subtitle {
+        margin-top: 2px;
+        font-size: 12px;
+        color: #9ca3af;
+      }
+
+      .boot-shell p {
+        margin: 0;
+      }
+
+      .boot-spinner {
+        margin-top: 10px;
+        width: 60px;
+        height: 2px;
+        border-radius: 999px;
+        background: rgba(31, 41, 55, 0.9);
+        overflow: hidden;
+        position: relative;
+      }
+
+      .boot-spinner::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        width: 40%;
+        background: linear-gradient(
+          90deg,
+          rgba(59, 130, 246, 0) 0%,
+          rgba(59, 130, 246, 0.9) 50%,
+          rgba(59, 130, 246, 0) 100%
+        );
+        animation: boot-pulse 1.1s ease-in-out infinite;
+      }
+
+      @keyframes boot-pulse {
+        0% {
+          transform: translateX(-120%);
+        }
+        50% {
+          transform: translateX(0%);
+        }
+        100% {
+          transform: translateX(120%);
+        }
       }
 
       .ffui-boot {
@@ -135,13 +204,15 @@
   </head>
 
   <body data-tauri-drag-region>
-    <div id="ffui-boot" class="ffui-boot" aria-label="loading">
-      <canvas id="ffui-boot-stream" class="ffui-boot-stream"></canvas>
-      <div class="ffui-boot-vignette"></div>
-      <div id="ffui-boot-text-stream" class="ffui-boot-text-stream" aria-hidden="true"></div>
+    <div id="app">
+      <div class="boot-shell" aria-label="loading">
+        <img class="boot-logo" src="/ffui.svg" alt="FFUI" />
+        <div>
+          <p class="boot-subtitle">正在启动界面，请稍候…</p>
+        </div>
+        <div class="boot-spinner"></div>
+      </div>
     </div>
-
-    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
